--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "mss (>=10.1.0,<11.0.0)",
     "pyside6 (>=6.10.0,<7.0.0)",
     "pillow (>=12.0.0,<13.0.0)",
-    "openai (>=2.8.1,<3.0.0)"
+    "openai (>=2.8.1,<3.0.0)",
+    "pytesseract (>=0.3.13,<0.4.0)",
+    "numpy (>=2.4.2,<3.0.0)"
 ]
 
 
