--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "pillow (>=12.0.0,<13.0.0)",
     "openai (>=2.8.1,<3.0.0)",
     "pytesseract (>=0.3.13,<0.4.0)",
-    "numpy (>=2.4.2,<3.0.0)"
+    "numpy (>=2.4.2,<3.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "opencv-python (>=4.13.0.92,<5.0.0.0)"
 ]
 
 
